--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             </form>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item login-Btn">
+                    <a class="nav-link login-Btn" href="#">Cart</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item login-Btn">
                     <a class="nav-link login-Btn" href="#" ng-click="showLoginPopup()">Login</a>
                 </li>
             </ul>
@@ -32,84 +37,135 @@
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-2" style="background-color: #f8f9fa">as;ldklas</div>
-            <div class="col-md-10">
-                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-                        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-                        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="media/carousel/img1.jpg" alt="First slide" style="width: 100%; height: 600px;">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="media/carousel/img2.jpg" alt="Second slide" style="width: 100%; height: 600px;">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="media/carousel/img3.jpg" alt="Third slide" style="width: 100%; height: 600px;">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </a>
-                </div>
-                <div class="heading">
-                    <h2><a href="">Our Products</a></h2>
-                </div>
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="media/productImgs/apple.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Apple</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Add item</a>
-                                <a href="#" class="btn btn-primary">Add item</a>
+            <div class="col-md-2 left-div" style="background-color: #f8f9fa">as;ldklas</div>
+            <div class="col-md-10 right-div">
+                <div>
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+                            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+                            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="media/carousel/img1.jpg" alt="First slide" style="width: 100%; height: 600px;">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="media/carousel/img2.jpg" alt="Second slide" style="width: 100%; height: 600px;">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="media/carousel/img3.jpg" alt="Third slide" style="width: 100%; height: 600px;">
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="media/productImgs/banana.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Banana</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Add item</a>
-                                <a href="#" class="btn btn-primary">Add item</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="media/productImgs/kiwi.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Kiwi</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Add item</a>
-                                <a href="#" class="btn btn-primary">Add item</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="media/productImgs/pineapple.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Pineapple</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Add item</a>
-                                <a href="#" class="btn btn-primary">Add item</a>
-                            </div>
-                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </a>
                     </div>
                 </div>
-            </div>
+                <div>
+                    <div class="heading">
+                        <h2><a ui-sref="Products">Our Products</a></h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="media/productImgs/apple.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Apple</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <button href="#" class="btn btn-primary" disabled>$25</button>
+                                    <a href="#" class="btn btn-primary">Add item</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="media/productImgs/banana.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Banana</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <button href="#" class="btn btn-primary" disabled>$25</button>
+                                    <a href="#" class="btn btn-primary">Add item</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="media/productImgs/kiwi.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Kiwi</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <button href="#" class="btn btn-primary" disabled>$25</button>
+                                    <a href="#" class="btn btn-primary">Add item</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="media/productImgs/pineapple.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Pineapple</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <button href="#" class="btn btn-primary" disabled>$25</button>
+                                    <a href="#" class="btn btn-primary">Add item</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="category" >
+                    <div class="heading">
+                        <h2>Categories</h2>
+                    </div>
+                    <div class="row" style="background-color: #f8f9fa;">
+                        <div class="col-md-3">
+                            <a ui-sref="category" class="category-card-link">
+                                <div class="card" style="width: 18rem;">
+                                  <div class="position-relative">
+                                    <img src="media/categoryImgs/fruits.jpg" class="card-img blur-image" alt="...">
+                                      <h3 class="card-title text-center position-absolute top-50 start-50 translate-middle">Fruits</h3>
+                                  </div>
+                                </div>
+                              </a>
+                        </div>
+                        <div class="col-md-3">
+                            <a ui-sref="category" class="category-card-link">
+                                <div class="card" style="width: 18rem;">
+                                  <div class="position-relative">
+                                    <img src="media/categoryImgs/cold_drinks.jpg" class="card-img blur-image" alt="...">
+                                      <h3 class="card-title text-center position-absolute top-50 start-50 translate-middle">Cold Drink</h3>
+                                  </div>
+                                </div>
+                              </a>
+                        </div>
+                        <div class="col-md-3">
+                            <a ui-sref="category" class="category-card-link">
+                                <div class="card" style="width: 18rem;">
+                                  <div class="position-relative">
+                                    <img src="media/categoryImgs/snacks.jpg" class="card-img blur-image" alt="...">
+                                      <h3 class="card-title text-center position-absolute top-50 start-50 translate-middle">Snacks</h3>
+                                  </div>
+                                </div>
+                              </a>
+                        </div>
+                        <div class="col-md-3">
+                            <a ui-sref="category" class="category-card-link">
+                                <div class="card" style="width: 18rem;">
+                                  <div class="position-relative">
+                                    <img src="media/categoryImgs/vegetables.jpg" class="card-img blur-image" alt="...">
+                                      <h3 class="card-title text-center position-absolute top-50 start-50 translate-middle">Vegetables</h3>
+                                  </div>
+                                </div>
+                              </a>
+                        </div>
+                    </div>  
+                </div>
+            </div>  
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
