--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/style/style.css">
 </head>
-<body ng-app="myApp" ng-controller="indexController" ui-view>
+<body ng-app="myApp" ng-controller="indexController" ui-view="" class="ng-scope">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand logo-Img" href="#">
             <h2 style="color: rgb(8, 130, 89);">Shopify</h2>
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto"></ul>
             <form class="form-inline my-2 my-lg-0 search-form">
-                <input class="form-control mr-sm-2 search-input" type="search" placeholder="&#xF52A;Search" aria-label="Search">
+                <input class="form-control mr-sm-2 search-input" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0 search-Btn" type="submit"> <i class="bi bi-search"></i>Search</button>
             </form>            
             <ul class="navbar-nav ml-auto">
