--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                         <h5 class="card-title">{{product.product_name}}</h5>
                                         <!-- <p class="card-text">{{product.description}}</p> -->
                                         <p class="product-price">₹{{product.price}}</p>
-                                        <button href="#" class="btn btn-primary" style="background-color: rgb(8, 130, 89); border-color: rgb(8, 130, 89);">
+                                        <button href="#" class="btn btn-primary" style="background-color: rgb(8, 130, 89); border-color: rgb(8, 130, 89);" ng-click="buyNow(product)">
                                             Buy Now
                                         </button>
                                         <button class="btn btn-primary" id="loginBtn" style="background-color: rgb(8, 130, 89); border-color: rgb(8, 130, 89);" ng-click="addCart(product)">
