--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body ng-app="myApp" ng-controller="indexController" ui-view="" class="ng-scope">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand logo-Img" ui-sref="Home" ng-click="clearSearch">
+        <a class="navbar-brand logo-Img" ui-sref="Home" ng-click="clearSearch()">
             <h2 style="color: rgb(8, 130, 89);">Shopify</h2>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
